# solana-close-ata

./: Cargo.toml  README.md
src/: main.rs
